update app constructor & add kafka consumer

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-USE_GRAPHQL=true
-USE_GRPC=true
+USE_HTTP=false
+USE_GRPC=false
+USE_GRAPHQL=false
+USE_KAFKA=false
 
 HTTP_PORT=8080
 GRPC_PORT=8081
@@ -19,3 +21,7 @@ REDIS_READ_AUTH=
 REDIS_WRITE_HOST=localhost
 REDIS_WRITE_PORT=6379
 REDIS_WRITE_AUTH=
+
+KAFKA_BROKERS=localhost:9092
+KAFKA_CLIENT_ID=warung-service
+KAFKA_CONSUMER_GROUP=warung-service-group
