--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-USE_HTTP=false
+USE_HTTP=true
 USE_GRPC=false
 USE_GRAPHQL=false
 USE_KAFKA=false
@@ -10,17 +10,32 @@ GRPC_AUTH_KEY=123456
 BASIC_AUTH_USERNAME=user
 BASIC_AUTH_PASS=pass
 
+USE_MONGO=true
 MONGODB_HOST_WRITE=mongodb://localhost:27017
-MONGODB_NAME_WRITE=warungservice
+MONGODB_NAME_WRITE=test
 MONGODB_HOST_READ=mongodb://localhost:27017
-MONGODB_NAME_READ=warungservice
+MONGODB_NAME_READ=test
 
+USE_SQL=true
+SQL_DRIVER_NAME=postgres
+SQL_DB_READ_HOST=localhost
+SQL_DB_READ_USER=postgres
+SQL_DB_READ_PASSWORD=123456
+SQL_DB_READ_NAME=cms
+SQL_DB_WRITE_HOST=localhost
+SQL_DB_WRITE_USER=postgres
+SQL_DB_WRITE_PASSWORD=123456
+SQL_DB_WRITE_NAME=cms
+
+USE_REDIS=true
 REDIS_READ_HOST=localhost
 REDIS_READ_PORT=6379
 REDIS_READ_AUTH=
 REDIS_WRITE_HOST=localhost
 REDIS_WRITE_PORT=6379
 REDIS_WRITE_AUTH=
+
+USE_RSA_KEY=true
 
 KAFKA_BROKERS=localhost:9092
 KAFKA_CLIENT_ID=warung-service
