update env configuration

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+# Basic env configuration
+
 USE_HTTP=true
 USE_GRPC=false
 USE_GRAPHQL=false
@@ -38,5 +40,3 @@ REDIS_WRITE_AUTH=
 USE_RSA_KEY=true
 
 KAFKA_BROKERS=localhost:9092
-KAFKA_CLIENT_ID=warung-service
-KAFKA_CONSUMER_GROUP=warung-service-group
