update env basic & extend in each service

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # Basic env configuration
 
-USE_HTTP=true
+USE_HTTP=false
 USE_GRPC=false
 USE_GRAPHQL=false
 USE_KAFKA=false
@@ -14,20 +14,16 @@ BASIC_AUTH_PASS=pass
 
 USE_MONGO=true
 MONGODB_HOST_WRITE=mongodb://localhost:27017
-MONGODB_NAME_WRITE=test
 MONGODB_HOST_READ=mongodb://localhost:27017
-MONGODB_NAME_READ=test
 
 USE_SQL=true
 SQL_DRIVER_NAME=postgres
 SQL_DB_READ_HOST=localhost
 SQL_DB_READ_USER=postgres
 SQL_DB_READ_PASSWORD=123456
-SQL_DB_READ_NAME=cms
 SQL_DB_WRITE_HOST=localhost
 SQL_DB_WRITE_USER=postgres
 SQL_DB_WRITE_PASSWORD=123456
-SQL_DB_WRITE_NAME=cms
 
 USE_REDIS=true
 REDIS_READ_HOST=localhost
