--- a/cmd/wedding/.env.extend
+++ b/cmd/wedding/.env.extend
@@ -1,2 +1,7 @@
-KAFKA_CLIENT_ID=wedding-service
-KAFKA_CONSUMER_GROUP=wedding-service-group
+USE_HTTP=true
+USE_GRAPHQL=true
+
+HTTP_PORT=
+
+KAFKA_CLIENT_ID=
+KAFKA_CONSUMER_GROUP=
