feat: update kafka config, add publisher

--- a/cmd/line-chatbot/.env.sample
+++ b/cmd/line-chatbot/.env.sample
@@ -4,7 +4,7 @@
 USE_HTTP=[bool]
 USE_GRPC=[bool]
 USE_GRAPHQL=[bool]
-USE_KAFKA=[bool]
+USE_KAFKA_CONSUMER=[bool]
 
 HTTP_PORT=[int]
 GRPC_PORT=[int]
@@ -38,11 +38,11 @@ REDIS_WRITE_AUTH=[string]
 USE_RSA_KEY=[bool]
 
 KAFKA_BROKERS=[string]
+KAFKA_CLIENT_ID=[string]
+KAFKA_CONSUMER_GROUP=[string]
 
 
 # Additional env
-
-MONGODB_NAME=[string]
 
 LINE_CHANNEL_SECRET=[string]
 LINE_CHANNEL_TOKEN=[string]
