add application server factory

--- a/cmd/storage-service/.env.sample
+++ b/cmd/storage-service/.env.sample
@@ -1,13 +1,14 @@
 # Basic env configuration
 
 # Service Handlers
-USE_HTTP=[bool]
-USE_GRPC=[bool]
-USE_GRAPHQL=[bool]
-USE_KAFKA_CONSUMER=[bool]
+USE_REST=false
+USE_GRPC=true
+USE_GRAPHQL=false
+USE_KAFKA_CONSUMER=false
 
-HTTP_PORT=[int]
-GRPC_PORT=[int]
+REST_HTTP_PORT=8000
+GRAPHQL_HTTP_PORT=8001
+GRPC_PORT=8002
 
 BASIC_AUTH_USERNAME=[string]
 BASIC_AUTH_PASS=[string]
