--- a/cmd/auth-service/.env.sample
+++ b/cmd/auth-service/.env.sample
@@ -1,13 +1,14 @@
 # Basic env configuration
 
 # Service Handlers
-USE_HTTP=true
+USE_REST=false
 USE_GRPC=true
-USE_GRAPHQL=true
-USE_KAFKA_CONSUMER=true
+USE_GRAPHQL=false
+USE_KAFKA_CONSUMER=false
 
-HTTP_PORT=8000
-GRPC_PORT=8001
+REST_HTTP_PORT=8000
+GRAPHQL_HTTP_PORT=8001
+GRPC_PORT=8002
 
 BASIC_AUTH_USERNAME=user
 BASIC_AUTH_PASS=pass
