--- a/cmd/storage-service/.env.sample
+++ b/cmd/storage-service/.env.sample
@@ -37,6 +37,8 @@ KAFKA_BROKERS=[string]
 KAFKA_CLIENT_ID=[string]
 KAFKA_CONSUMER_GROUP=[string]
 
+JAEGER_TRACING_HOST=[string]
+
 
 # Additional env
 
