--- a/cmd/notification-service/.env.sample
+++ b/cmd/notification-service/.env.sample
@@ -5,6 +5,7 @@ USE_REST=true
 USE_GRPC=true
 USE_GRAPHQL=true
 USE_KAFKA_CONSUMER=true
+USE_CRON_SCHEDULER=true
 
 REST_HTTP_PORT=8000
 GRAPHQL_HTTP_PORT=8001
