--- a/cmd/user-service/.env.sample
+++ b/cmd/user-service/.env.sample
@@ -5,6 +5,7 @@ USE_REST=false
 USE_GRPC=true
 USE_GRAPHQL=false
 USE_KAFKA_CONSUMER=false
+USE_CRON_SCHEDULER=true
 
 REST_HTTP_PORT=8000
 GRAPHQL_HTTP_PORT=8001
