worker feature: add redis subscriber

--- a/cmd/notification-service/.env.sample
+++ b/cmd/notification-service/.env.sample
@@ -6,6 +6,7 @@ USE_GRPC=true
 USE_GRAPHQL=true
 USE_KAFKA_CONSUMER=true
 USE_CRON_SCHEDULER=true
+USE_REDIS_SUBSCRIBER=true
 
 REST_HTTP_PORT=8000
 GRAPHQL_HTTP_PORT=8001
