pkg: move public jwt to internal auth-service

--- a/cmd/storage-service/.env.sample
+++ b/cmd/storage-service/.env.sample
@@ -47,3 +47,6 @@ JAEGER_TRACING_HOST=[string]
 MINIO_HOST=[string]
 MINIO_ACCESS_KEY=[string]
 MINIO_SECRET_KEY=[string]
+
+AUTH_SERVICE_GRPC_HOST=
+AUTH_SERVICE_GRPC_KEY=
