update auth service

--- a/cmd/auth-service/.env.sample
+++ b/cmd/auth-service/.env.sample
@@ -40,6 +40,8 @@ KAFKA_CLIENT_ID=client_id
 KAFKA_CONSUMER_GROUP=[string]
 
 JAEGER_TRACING_HOST=[string]
+GRAPHQL_SCHEMA_DIR=[string]
+JSON_SCHEMA_DIR=[string]
 
 # Additional env
 
