--- a/cmd/storage-service/.env.sample
+++ b/cmd/storage-service/.env.sample
@@ -40,6 +40,8 @@ KAFKA_CLIENT_ID=[string]
 KAFKA_CONSUMER_GROUP=[string]
 
 JAEGER_TRACING_HOST=[string]
+GRAPHQL_SCHEMA_DIR=[string]
+JSON_SCHEMA_DIR=[string]
 
 
 # Additional env
