--- a/cmd/line-chatbot/.env.sample
+++ b/cmd/line-chatbot/.env.sample
@@ -7,6 +7,7 @@ USE_GRAPHQL=true
 USE_KAFKA_CONSUMER=false
 USE_CRON_SCHEDULER=true
 USE_REDIS_SUBSCRIBER=true
+USE_TASK_QUEUE_WORKER=true
 
 REST_HTTP_PORT=8000
 GRAPHQL_HTTP_PORT=8001
