app: capture panic in each serve func because cannot capture panic from goroutines in main thread

--- a/cmd/auth-service/.env.sample
+++ b/cmd/auth-service/.env.sample
@@ -1,16 +1,17 @@
 # Basic env configuration
 
 # Service Handlers
-USE_REST=false
+## Server
+USE_REST=true
 USE_GRPC=true
-USE_GRAPHQL=false
-USE_KAFKA_CONSUMER=false
+USE_GRAPHQL=true
+## Worker
+USE_KAFKA_CONSUMER=true
 USE_CRON_SCHEDULER=true
 USE_REDIS_SUBSCRIBER=true
 USE_TASK_QUEUE_WORKER=true
 
-REST_HTTP_PORT=8000
-GRAPHQL_HTTP_PORT=8001
+HTTP_PORT=8000
 GRPC_PORT=8002
 
 BASIC_AUTH_USERNAME=user
