--- a/cmd/notification-service/.env.sample
+++ b/cmd/notification-service/.env.sample
@@ -1,15 +1,17 @@
 # Basic env configuration
 
 # Service Handlers
-USE_REST=true
-USE_GRPC=true
+## Server
+USE_REST=false
+USE_GRPC=false
 USE_GRAPHQL=true
-USE_KAFKA_CONSUMER=true
-USE_CRON_SCHEDULER=true
-USE_REDIS_SUBSCRIBER=true
+## Worker
+USE_KAFKA_CONSUMER=false
+USE_CRON_SCHEDULER=false
+USE_REDIS_SUBSCRIBER=false
+USE_TASK_QUEUE_WORKER=true
 
-REST_HTTP_PORT=8000
-GRAPHQL_HTTP_PORT=8001
+HTTP_PORT=8000
 GRPC_PORT=8002
 
 BASIC_AUTH_USERNAME=user
