--- a/cmd/line-chatbot/.env.sample
+++ b/cmd/line-chatbot/.env.sample
@@ -1,16 +1,17 @@
 # Basic env configuration
 
 # Service Handlers
+## Server
 USE_REST=true
 USE_GRPC=true
 USE_GRAPHQL=true
-USE_KAFKA_CONSUMER=false
+## Worker
+USE_KAFKA_CONSUMER=true
 USE_CRON_SCHEDULER=true
 USE_REDIS_SUBSCRIBER=true
 USE_TASK_QUEUE_WORKER=true
 
-REST_HTTP_PORT=8000
-GRAPHQL_HTTP_PORT=8001
+HTTP_PORT=8000
 GRPC_PORT=8002
 
 BASIC_AUTH_USERNAME=[string]
