--- a/.github/workflows/candi.yml
+++ b/.github/workflows/candi.yml
@@ -22,3 +22,25 @@ jobs:
       run: |
         make test
         bash <(curl -s https://codecov.io/bash)
+
+    - name: Build binary CLI
+      run: |
+        GOOS=linux GOARCH=amd64 go build -o candi-linux cmd/candi/*.go
+        GOOS=darwin GOARCH=amd64 go build -o candi-osx cmd/candi/*.go
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Setup GCP
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCS_SA_KEY }}
+          project_id: ${{ secrets.GCS_PROJECT }}
+          export_default_credentials: true
+
+      - name: Deploy
+        run: |-
+          gsutil -m rsync -R candi-linux gs://agungdp/bin/candi-linux
+          gsutil -m rsync -R candi-osx gs://agungdp/bin/candi-osx
