--- a/.github/workflows/candi.yml
+++ b/.github/workflows/candi.yml
@@ -29,6 +29,12 @@ jobs:
         GOOS=linux GOARCH=amd64 go build -o candi/candi-linux cmd/candi/*.go
         GOOS=darwin GOARCH=amd64 go build -o candi/candi-osx cmd/candi/*.go
 
+    - name: Upload Artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: candi
+        path: candi
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -40,6 +46,12 @@ jobs:
           service_account_key: ${{ secrets.GCS_SA_KEY }}
           project_id: ${{ secrets.GCS_PROJECT }}
           export_default_credentials: true
+
+      - name: Get Artifact
+      - uses: actions/download-artifact@master
+        with:
+          name: candi
+          path: candi
 
       - name: Deploy
         run: |-
