--- a/.github/workflows/candi.yml
+++ b/.github/workflows/candi.yml
@@ -38,7 +38,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Setup GCP
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
