--- a/.github/workflows/deploy-binaries.yml
+++ b/.github/workflows/deploy-binaries.yml
@@ -9,6 +9,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.15
+
       - name: Setup GCP
         uses: google-github-actions/github-actions/setup-gcloud@master
         with:
