--- a/.github/workflows/deploy-binaries.yml
+++ b/.github/workflows/deploy-binaries.yml
@@ -17,11 +17,13 @@ jobs:
           go-version: 1.21
 
       - name: Setup GCP
-        uses: google-github-actions/setup-gcloud@v0
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          service_account_key: ${{ secrets.GCS_SA_KEY }}
-          project_id: ${{ secrets.GCS_PROJECT }}
-          export_default_credentials: true
+          credentials_json: '${{ secrets.GCS_SA_KEY }}'
+  
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
 
       - name: Build binaries
         run: |
